--- a/plugins/CoreUpdater/lang/el.json
+++ b/plugins/CoreUpdater/lang/el.json
@@ -7,6 +7,7 @@
         "DisablingIncompatiblePlugins": "Απενεργοποίηση των μη συμβατών πρόσθετων: %s",
         "DownloadingUpdateFromX": "Λήψη αναβάθμισης από %s",
         "DownloadX": "Λήψη %s",
+        "UpdateLog": "Αρχείο καταγραφής ενημερώσεων",
         "EmptyDatabaseError": "Η βάση δεδομένων %s είναι κενή. Πρέπει να επεξεργαστείτε ή να διαγράψετε το αρχείο ρυθμίσεων του Matomo.",
         "ErrorDIYHelp": "Αν είστε προχωρημένος χρήστης και εμφανιστεί σφάλμα στην αναβάθμιση της βάσης δεδομένων:",
         "ErrorDIYHelp_1": "Αναγνωρίστε και διορθώστε την προέλευση του προβλήματος (π.χ., memory_limit ή max_execution_time)",
