--- a/plugins/Installation/lang/tr.json
+++ b/plugins/Installation/lang/tr.json
@@ -22,6 +22,10 @@
         "GoBackAndDefinePrefix": "Geri dönerek Matomo Tabloları için bir tablo ön eki belirtin",
         "HappyAnalysing": "İstatistiklerin tadını çıkarın!",
         "Installation": "Yükleme",
+        "InformationalResults": "Bilgi sonuçları",
+        "CopyBelowInfoForSupport": "Destek ekibinin sorması durumunda göndermek için aşağıdaki bilgileri kopyalayın ya da indirin.",
+        "CopySystemCheck": "Sistem denetimini kopyala",
+        "DownloadSystemCheck": "Sistem denetimini indir",
         "InstallationStatus": "Yükleme durumu",
         "InsufficientPrivilegesHelp": "Bu izinleri, phpMyAdmin gibi bir araç kullanarak ya da doğru SQL sorgularını yürüterek ekleyebilirsiniz. Bu işlemleri nasıl yapacağınızı bilmiyorsanız, lütfen sistem yöneticinizden sizin için bu izinleri vermesini isteyin.",
         "InsufficientPrivilegesMain": "Veritabanı yok (ya da oluşturulamadı) ya da belirtilen Kullanıcının izinleri yeterli değil. Veritabanı kullanıcısına şu izinlerin verilmiş olması gerekir: %s",
