--- a/plugins/Installation/lang/el.json
+++ b/plugins/Installation/lang/el.json
@@ -22,6 +22,8 @@
         "GoBackAndDefinePrefix": "Επιστρέψτε και ορίστε ένα Πρόθεμα για τους Πίνακες του Matomo",
         "HappyAnalysing": "Καλή ανάλυση!",
         "Installation": "Εγκατάσταση",
+        "InformationalResults": "Ενημερωτικά αποτελέσματα",
+        "CopySystemCheck": "Αντιγραφή ελέγχου συστήματος",
         "InstallationStatus": "Κατάσταση εγκατάστασης",
         "InsufficientPrivilegesHelp": "Μπορείτε να προσθέσετε αυτά τα δικαιώματα χρησιμοποιώντας ένα εργαλείο όπως το phpMyAdmin ή εκτελόντας τα κατάλληλα ερωτήματα SQL. Αν δεν ξέρετε πως τα κάνετε αυτά, ρωτήστε το διαχειριστή του συστήματος για να δώσει αυτά τα δικαιώματα.",
         "InsufficientPrivilegesMain": "Είτε δεν υπάρχει η βάση δεδομένων (και δεν ήταν δυνατή η δημιουργία της), είτε ο συγκεκριμένος χρήστης δεν έχει τα απαραίτητα δικαιώματα. Ο χρήστης της βάσης δεδομένων πρέπει να έχει τα εξής δικαιώματα: %s",
