--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -20,7 +20,6 @@
         "DonateCall1": "Matomo will always cost you nothing to use, but that doesn't mean it costs us nothing to make.",
         "DonateCall2": "Matomo needs your continued support to grow and thrive.",
         "DonateCall3": "If you feel that Matomo has added significant value to your business or endeavour, %1$splease consider donating%2$s or %3$spurchasing a premium feature%4$s. Every penny will help.",
-        "DonateFormInstructions": "Click on the slider to select an amount, then click subscribe to donate.",
         "EndShortcut": "End",
         "EnterZenMode": "Enter Zen mode (hide the menus)",
         "ExitZenMode": "Exit Zen mode (show the menus)",
@@ -32,7 +31,7 @@
         "ShowExportUrl": "Show Export URL",
         "HideExportUrl": "Hide Export URL",
         "HomeShortcut": "Home",
-        "HowMuchIsPiwikWorth": "How much is Matomo worth to you?",
+        "FindUsOn": "Find us on",
         "IncludeRowsWithLowPopulation": "Rows with low population are hidden %s Show all rows",
         "InjectedHostEmailBody": "Hello, I tried to access Matomo today and encountered the unknown hostname warning.",
         "InjectedHostEmailSubject": "Matomo was accessed with an unknown hostname: %s",
@@ -45,7 +44,8 @@
         "VisitTypeReturning": "Returning",
         "VisitTypeReturningCustomer": "Returning Customer",
         "MainNavigation": "Main navigation",
-        "MakeOneTimeDonation": "Make a one time donation, instead.",
+        "YourDonationWillHelp": "Your donation will directly help fund new features and improvements for this open-source analytics platform. This means the community will always benefit from a tool that protects privacy and lets you stay in control of your data.",
+        "ThanksFromAllOfUs": "Thank you from all of us at Matomo!",
         "Menu": "Menu",
         "NoPrivilegesAskPiwikAdmin": "You are logged in as '%1$s' but it seems you don't have any permission set in Matomo. %2$s Ask your Matomo administrator (click to email)%3$s to give you 'view' access to a website.",
         "OnlyForSuperUserAccess": "This widget is displayed in the default dashboard only to users having Super User access.",
