--- a/plugins/CorePluginsAdmin/lang/zh-tw.json
+++ b/plugins/CorePluginsAdmin/lang/zh-tw.json
@@ -49,6 +49,7 @@
         "NotDownloadable": "無法下載",
         "PluginNotDownloadable": "外掛無法下載。",
         "PluginNotDownloadablePaidReason": "可能的原因為授權過期或超出限度。",
+        "PluginRequiresInternet": "此外掛需要網際網路連線。若你要使用此功能，請檢查你的「enable_internet_features」設定值。",
         "PluginActivated": "外掛已啟用",
         "Status": "狀態",
         "SuccessfullyActicated": "你已成功啟用 <strong>%s<\/strong>。",
@@ -56,6 +57,17 @@
         "TeaserExtendPiwikByPlugin": "%1$s從市集安裝新外掛%2$s來擴展 Matomo，或是%3$s上傳 .zip 格式的外掛%4$s。",
         "TeaserExtendPiwikByTheme": "%1$s安裝新主題%2$s享受不同的視覺體驗。",
         "InstallingNewPluginViaMarketplaceOrUpload": "你可以從市集中安裝外掛或是直接%1$s上傳 .zip 格式%2$s的外掛。",
+        "TagManagerNowAvailableTitle": "Matomo Tag Manager 現已推出",
+        "TagManagerNowAvailableSubtitle": "在單一平台上管理你的所有標籤，只屬於你的獨特觀點，潛能無限！",
+        "ActivateTagManagerNow": "立即啟用 Tag Manager",
+        "TagManagerEmailSuperUserToActivate": "寄信給超級使用者以啟用此新功能",
+        "TagManagerTeaserHideSuperUser": "不要顯示此頁給所有使用者",
+        "TagManagerTeaserHideNonSuperUser": "我沒興趣，不再顯示此頁",
+        "WhatIsTagManager": "Tag Manager 是什麼？",
+        "WhatIsTagManagerDetails1": "類似後台管理系統 (CMS) 予你不需要 HTML\/CSS 知識就能發布網站內容的彈性，標籤管理系統 (TMS) 是為你簡化嵌入第一方和第三方追蹤標籤 (或稱為 snippets 或 pixels) 到網站內的程序的首選應用程式。",
+        "TagManagerLearnMoreInUserGuide": "到 Tag Manager 使用者說明內了解更多",
+        "WhyUsingATagManager": "為什麼需要 Tag Manager？",
+        "AreThereAnyRisks": "有任何風險嗎？",
         "Theme": "主題",
         "Themes": "主題",
         "ThemesDescription": "主題可以改變 Matomo 的外觀和界面，並提供嶄新的視覺體驗，讓你享受你的數據報表。",
