--- a/plugins/Installation/lang/cs.json
+++ b/plugins/Installation/lang/cs.json
@@ -22,6 +22,10 @@
         "GoBackAndDefinePrefix": "Jít zpět a nastavit prefix pro tabulky Matomou",
         "HappyAnalysing": "Šťastné analyzování!",
         "Installation": "Instalace",
+        "InformationalResults": "Informační výsledky",
+        "CopyBelowInfoForSupport": "Zkopírujte nebo stáhněte níže uvedené informace v případě, že vás náš tým podpory požádá o tyto informace.",
+        "CopySystemCheck": "Kopírovat kontrolu systému",
+        "DownloadSystemCheck": "Stáhnout kontrolu systému",
         "InstallationStatus": "Stav instalace",
         "InsufficientPrivilegesHelp": "Tato privilegia můžete přidat v nástroji jako je phpMyAdmin, nebo provedením správných SQL dotazů. Pokud nevíte, jak to udělat, požádejte svého systémového administrátora, aby vám tato privilegia udělil.",
         "InsufficientPrivilegesMain": "Databáze buď neexistuje, a nemohla být vytvořena, nebo má databázový uživatel nedostatečná privilegia. Databázový uživatel musí mít následující privilegia: %s",
