--- a/plugins/Login/lang/el.json
+++ b/plugins/Login/lang/el.json
@@ -16,6 +16,7 @@
         "SettingBruteForceEnableHelp": "Ο Εντοπισμός Βίαιης Επίθεσης είναι ένα σημαντικό χαρακτηριστικό ασφάλειας για την προστασία των δεδομένων σας από μη εξουσιοδοτημένη πρόσβαση. Αντί να επιτρέπεται σε ένα χρήστη να δοκιμάζει χιλιάδες ή εκατομμύρια συνδυασμών συνθηματικών μέσα σε ένα μικρό χρονικό διάστημα, θα επιτρέπει μόνο ένα συγκεκριμένο αριθμό αποτυχημένων προσπαθειών σύνδεσης. Αν συμβούν πολλές αποτυχημένες προσπάθειες εισόδου μέσα σε αυτό το χρονικό διάστημα, ο χρήστης δε θα μπορεί να κάνει σύνδεση αν δεν περάσει κάποιος χρόνος. Πρέπει να σημειωθεί ότι αν μια διεύθυνση IP μπλοκαριστεί, κάθε χρήστης που χρησιμοποιεί αυτή τη διεύθυνση επίσης θα μπλοκαριστεί από την είσοδο.",
         "SettingBruteForceWhitelistIp": "Να μην αποκλείονται ποτέ οι παρακάτω διευθύνσεις IP από την είσοδο",
         "SettingBruteForceBlacklistIp": "Να μπλοκάρονται πάντα αυτές οι διευθύνσεις IP από το να κάνουν είσοδο",
+        "NotAllowListTakesPrecendence": "Αν μια διεύθυνση IP υπάρχει και στη λίστα αποκλεισμού και στη λίστα μη αποκλεισμού, τότε η λίστα αποκλεισμού έχει προτεραιότητα και η διεύθυνση IP δε θα επιτραπεί.",
         "SettingBruteForceMaxFailedLogins": "Αριθμός επιτρεπόμενων αποπειρών σύνδεσης μέσα στο χρονικό διάστημα",
         "SettingBruteForceMaxFailedLoginsHelp": "Αν έχει καταγραφεί μεγαλύτερος αριθμός αποτυχημένων αποπειρών σύνδεσης από τον αριθμό αυτό μέσα στο παρακάτω δεδομένο χρονικό διάστημα, να μπλοκαριστεί η διεύθυνση IP.",
         "SettingBruteForceTimeRange": "Να μετριούνται οι απόπειρες εισόδου μέσα σε αυτό το χρονικό διάστημα σε λεπτά",
