--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -133,7 +133,10 @@
         "DaysHours": "%1$s 天 %2$s 小時",
         "DaysSinceFirstVisit": "和第一次訪問間隔",
         "DaysSinceLastEcommerceOrder": "和上次下單間隔",
+        "SecondsSinceLastEcommerceOrder": "秒自上次下單",
         "DaysSinceLastVisit": "和上次訪問間隔",
+        "SecondsSinceLastVisit": "秒自上次訪問",
+        "SecondsSinceFirstVisit": "秒自首次訪問",
         "Default": "預設",
         "DefaultAppended": "（預設）",
         "Delete": "刪除",
@@ -305,6 +308,7 @@
         "OneVisit": "1 訪問數",
         "OnlyEnterIfRequired": "只在你的 SMTP 伺服器需要使用者名稱時才輸入",
         "OnlyEnterIfRequiredPassword": "只在你的 SMTP 伺服器需要密碼時才輸入",
+        "SmtpFromEmailHelp": "預設值是 noreply@{DOMAIN}，你的 Matomo 網域 %1$s 會取代 {DOMAIN} 參數。<br>如果你寄信失敗，你可能要設定此位址與你的 SMTP 帳號一樣。",
         "NameShownInTheSenderColumn": "寄件人欄位顯示的名字",
         "OnlyUsedIfUserPwdIsSet": "只在使用者名稱\/密碼設定後才會生效，如果你不確定要使用何種方法，請詢問你的供應商。",
         "OpenSourceWebAnalytics": "免費分析平台",
@@ -507,7 +511,9 @@
         "MaximumNumberOfSegmentsComparedIs": "最多僅能同時比較 %s 個區隔。",
         "CompareDatesParamMustMatchComparePeriods": "%1$s 的參數長度必須符合 %2$s 的參數長度。",
         "MaximumNumberOfPeriodsComparedIs": "最多僅能同時比較 %s 個期間。",
-        "Custom": "自訂"
+        "Custom": "自訂",
+        "PreviousPeriod": "前一段期間",
+        "PreviousYear": "前一年"
     },
     "Mobile": {
         "AboutPiwikMobile": "關於 Matomo 行動版",
