--- a/plugins/Actions/lang/zh-tw.json
+++ b/plugins/Actions/lang/zh-tw.json
@@ -32,6 +32,7 @@
         "ColumnUniqueOutlinks": "不重複離開連結數",
         "ColumnIdPageview": "瀏覽數 ID",
         "ColumnInteractionPosition": "互動位置",
+        "ColumnPageViewPosition": "瀏覽數位置",
         "ActionsInVisit": "訪問中的活動數",
         "DownloadsReportDocumentation": "在這份報表你可以查看訪客已下載了哪個檔案。%sMatomo 是透過點擊下載連結來計算下載數，但不知道下載完成與否。",
         "EntryPagesReportDocumentation": "此報表包含指定期間內之到達網頁的相關資訊。所謂的到達網頁，是訪客進入網站時所訪問的第一個網頁。%s 到達網頁的網址以資料夾結構顯示。",
