--- a/plugins/CoreAdminHome/lang/da.json
+++ b/plugins/CoreAdminHome/lang/da.json
@@ -102,7 +102,7 @@
         "UseCustomLogo": "Anvend brugerdefineret logo",
         "ValidPiwikHostname": "Gyldigt Matomo værtsnavn",
         "WithOptionalRevenue": "med valgfri indtægter",
-        "YouAreOptedOut": "Du har fravalgt cookies til webanalyse.",
+        "YouAreOptedOut": "Du har fravalgt tracking.",
         "YouAreNotOptedOut": "Du tillader tracking.",
         "YouMayOptOut": "Når du besøger websitet bliver du tildelt et unikt identifikationsnummer, som er placeret i en cookie på din computer, og som bruges til at analysere, hvor mange, der besøger websitet, hvilke sider, der bliver set og lignende.",
         "YouMayOptOutBis": "Du har mulighed for at fravælge, at denne cookie placeres på din enhed.",
