--- a/plugins/DevicesDetection/lang/zh-tw.json
+++ b/plugins/DevicesDetection/lang/zh-tw.json
@@ -48,7 +48,9 @@
         "TV": "電視",
         "UserAgent": "User Agent",
         "MobileApp": "行動應用程式",
+        "MediaPlayer": "媒體播放器",
         "XVisitsFromDevices": "來自%2$s裝置的%1$s個訪問數",
+        "Wearable": "穿戴式裝置",
         "WidgetBrowsers": "訪客瀏覽器",
         "WidgetBrowsersDocumentation": "這份報表包含訪客所使用的瀏覽器資訊。每個瀏覽器的版本都會分開排列。"
     }
