--- a/plugins/Diagnostics/lang/zh-tw.json
+++ b/plugins/Diagnostics/lang/zh-tw.json
@@ -1,6 +1,7 @@
 {
     "Diagnostics": {
         "ConfigFileTitle": "設定檔",
+        "MysqlTemporaryTablesWarning": "Matomo 需要 MySQL CREATE TEMPORARY TABLES 權限以正常運作。",
         "MysqlMaxPacketSize": "最大封包大小",
         "MysqlMaxPacketSizeWarning": "推薦將 MySQL 資料庫中的「max_allowed_packet」值至少設定為 %1$s。目前的設定為 %2$s。",
         "HideUnchanged": "如果你只想看有變更過值的設定，你可以%1$s隱藏未修改的值%2$s。",
