--- a/plugins/Installation/lang/zh-tw.json
+++ b/plugins/Installation/lang/zh-tw.json
@@ -22,6 +22,10 @@
         "GoBackAndDefinePrefix": "返回並為 Matomo 資料表定義資料表前綴",
         "HappyAnalysing": "分析快樂！",
         "Installation": "安裝",
+        "InformationalResults": "結果資訊",
+        "CopyBelowInfoForSupport": "複製或下載以下的資料，以便我們的客服團隊在需要時可以向你收集。",
+        "CopySystemCheck": "複製系統檢查",
+        "DownloadSystemCheck": "下載系統檢查",
         "InstallationStatus": "安裝狀態",
         "InsufficientPrivilegesHelp": "你可以透過像是 phpMyAdmin 的工具或是執行 SQL 指令來新增這些權限。如果你不知道如何處理，請聯絡你的系統管理員提供這些權限給你。",
         "InsufficientPrivilegesMain": "資料庫不存在（或是無法建立），或是特定使用者的權限不足。資料庫使用者必須有以下權限：%s",
@@ -148,6 +152,7 @@
         "WelcomeHelp": "<p>Matomo 是一個輕鬆取得訪客資訊的免費網頁分析軟體。<\/p><p>此安裝過程分為 %s 個簡單步驟，大約需要 5 分鐘的時間。<\/p>",
         "WelcomeToCommunity": "歡迎來到 Matomo 社區！",
         "CannotConnectToDb": "無法連接資料庫",
-        "CannotConnectToDbResolvingExplanation": "這可能是暫時性的問題，試試%1$s重新整理頁面%2$s。如果問題持續發生請聯絡你的 Matomo 管理員。"
+        "CannotConnectToDbResolvingExplanation": "這可能是暫時性的問題，試試%1$s重新整理頁面%2$s。如果問題持續發生請聯絡你的 Matomo 管理員。",
+        "EmailPrivacyNotice": "你的 Email 將只用於向你寄送電子報，為此我們需要分享你的 Email 給第三方供應商。此供應商目前是 Mad Mimi，但是未來有可能變更。我們不會透漏你的 Email 給其他人，或將你的 Email 用於電子報以外的其他用途。你隨時可以退訂。參考我們的%1$s隱私權政策%2$s取得更多資訊。"
     }
 }
