--- a/plugins/UserLanguage/lang/en.json
+++ b/plugins/UserLanguage/lang/en.json
@@ -3,7 +3,7 @@
         "BrowserLanguage": "Browser language",
         "LanguageCode": "Language code",
         "PluginDescription": "Reports the language used by your visitors' browsers.",
-        "getLanguageDocumentation": "This report shows which Language the visitor's browsers are using. (e.g. \"English\")",
-        "getLanguageCodeDocumentation": "This report shows which exact Language code the visitor's browsers is set to. (e.g. \"German - Austria (de-at)\")"
+        "getLanguageDocumentation": "This report shows which language the visitor's browsers are using. (e.g. \"English\")",
+        "getLanguageCodeDocumentation": "This report shows which exact language code the visitor's browsers is set to. (e.g. \"German - Austria (de-at)\")"
     }
 }
