--- a/plugins/UserLanguage/lang/en.json
+++ b/plugins/UserLanguage/lang/en.json
@@ -2,6 +2,8 @@
     "UserLanguage": {
         "BrowserLanguage": "Browser language",
         "LanguageCode": "Language code",
-        "PluginDescription": "Reports the language used by your visitors' browsers."
+        "PluginDescription": "Reports the language used by your visitors' browsers.",
+        "getLanguageDocumentation": "This report shows which language the visitor's browsers are using. (e.g. \"English\")",
+        "getLanguageCodeDocumentation": "This report shows which exact language code the visitor's browsers is set to. (e.g. \"German - Austria (de-at)\")"
     }
 }
