--- a/plugins/CoreHome/lang/de.json
+++ b/plugins/CoreHome/lang/de.json
@@ -31,6 +31,7 @@
         "ShowExportUrl": "Export-URL anzeigen",
         "HideExportUrl": "Export-URL verstecken",
         "HomeShortcut": "Pos1",
+        "SupportUsOn": "Unterstützen Sie uns auf",
         "IncludeRowsWithLowPopulation": "Niedrige Werte sind ausgeschlossen %s Alle Zeilen anzeigen",
         "InjectedHostEmailBody": "Hallo, ich habe gerade versucht Matomo aufzurufen und erhielt eine Warnung, dass der Hostname unbekannt ist.",
         "InjectedHostEmailSubject": "Matomo wurde mit einem unbekannten Hostnamen aufgerufen: %s",
@@ -43,6 +44,8 @@
         "VisitTypeReturning": "Wiederkehrend",
         "VisitTypeReturningCustomer": "Wiederkehrender Kunde",
         "MainNavigation": "Hauptnavigation",
+        "YourDonationWillHelp": "Ihre Spende wird direkt dafür eingesetzt, neue Features und Erweiterungen für diese Open-Source Analyse-Plattforn zu finanzieren. Das bedeutet, die Comunity wird immer von einem Tool profitieren, welches Privatsphäre beschützt und Ihnen erlaubt, die Kontrolle Ihrer Daten zu bewahren.",
+        "ThanksFromAllOfUs": "Vielen Dank von uns allen bei Matomo!",
         "Menu": "Menü",
         "NoPrivilegesAskPiwikAdmin": "Sie sind angemeldet als '%1$s', aber es wurden keine Berechtigungen für diesen Benutzer in Matomo gesetzt. %2$s Bitte fragen Sie Ihren Matomo Administrator (klicken für E-Mail)%3$s um Zugriff auf die Webseite zu erhalten.",
         "OnlyForSuperUserAccess": "Dieses Widget wird im Standard-Dashboard nur Benutzern mit Hauptadministrator-Berechtigung angezeigt.",
