--- a/plugins/DevicesDetection/lang/de.json
+++ b/plugins/DevicesDetection/lang/de.json
@@ -20,6 +20,8 @@
         "dataTableLabelModels": "Modell",
         "dataTableLabelSystemVersion": "Betriebssystem-Version",
         "dataTableLabelTypes": "Typ",
+        "ClientType": "Kundentyp",
+        "ClientTypes": "Kundentypen",
         "Device": "Gerät",
         "DeviceBrand": "Gerätemarke",
         "DeviceBrands": "Gerätemarken",
