--- a/plugins/UserLanguage/lang/el.json
+++ b/plugins/UserLanguage/lang/el.json
@@ -2,6 +2,8 @@
     "UserLanguage": {
         "BrowserLanguage": "Γλώσσα φυλλομετρητή",
         "LanguageCode": "Κωδικός γλώσσας",
-        "PluginDescription": "Αναφέρει τη γλώσσα που χρησιμοποιούν τα προγράμματα πλοήγησης των επισκεπτών σας."
+        "PluginDescription": "Αναφέρει τη γλώσσα που χρησιμοποιούν τα προγράμματα πλοήγησης των επισκεπτών σας.",
+        "getLanguageDocumentation": "Η αναφορά αυτή δείχνει τη γλώσσα που χρησιμοποιεί το πρόγραμμα πλοήγησης του επισκέπτη (πχ. \"Αγγλικά\")",
+        "getLanguageCodeDocumentation": "Η αναφορά αυτή δείχνει τον ακριβή κωδικό γλώσσας στον οποίο έχει οριστεί το πρόγραμμα πλοήγησης του επισκέπτη (πχ. \"Γερμανία - Αυστρία (de-at)\")"
     }
 }
