--- a/plugins/UserLanguage/lang/tr.json
+++ b/plugins/UserLanguage/lang/tr.json
@@ -2,6 +2,8 @@
     "UserLanguage": {
         "BrowserLanguage": "Tarayıcı dili",
         "LanguageCode": "Dil kodu",
-        "PluginDescription": "Ziyaretçilerin web tarayıcılarında kullandıkları dilleri görüntüler."
+        "PluginDescription": "Ziyaretçilerin web tarayıcılarında kullandıkları dilleri görüntüler.",
+        "getLanguageDocumentation": "Bu rapor, ziyaretçilerin kullandığı web tarayıcının dilini içerir. (Örnek: \"Türkçe\")",
+        "getLanguageCodeDocumentation": "Bu rapor, ziyaretçilerin kullandığı web tarayıcının ayarlandığı tam dil kodunu içerir. (Örnek: \"Almanca - Avusturya (de-at)\")"
     }
 }
