--- a/plugins/Login/lang/de.json
+++ b/plugins/Login/lang/de.json
@@ -16,6 +16,7 @@
         "SettingBruteForceEnableHelp": "Brute Force Erkennung ist ein wichtiges Sicherheitsfeature, das Ihre Daten vor nicht autorisiertem Zugriff schützt. In dem einem Benutzer nicht erlaubt wird innerhalb von kurzer Zeit Tausende oder gar Millionen von Passwortkombinationen in kurzer Zeit auszuprobieren, wird stattdessen nur eine bestimmte Anzahl Anmeldeversuche im vorbestimmten Zeitbereich zugelassen. Bei zu vielen fehlgeschlagenen Anmeldungen in diesem Zeitbereich wird dem Benutzer für eine vorgegebene Zeit verwehrt, sich anzumelden. Bitte beachten Sie, dass wenn eine bestimmte IP blockiert ist, dann alle Benutzer welche diese IP verwenden ebenfalls von der Blockierung betroffen sind.",
         "SettingBruteForceWhitelistIp": "Diese IPs nie vom Anmelden abhalten",
         "SettingBruteForceBlacklistIp": "Diese IPs immer vom Anmelden abhalten",
+        "NotAllowListTakesPrecendence": "Wenn eine IP sowohl in der Liste der zu blockierenden als auch in der Liste der nie zu blockierenden IPs aufgeführt ist, dann wird die zu blockierende Liste berücksichtigt und die IP wird nicht zugelassen.",
         "SettingBruteForceMaxFailedLogins": "Anzahl erlaubter Versuche sich anzumelden innerhalb Zeitbereich",
         "SettingBruteForceMaxFailedLoginsHelp": "Wenn im konfigurierten Zeitraum mehr als diese Anzahl fehlgeschlagene Anmeldungen vermerkt werden, die IP blockieren.",
         "SettingBruteForceTimeRange": "Zähle Anmeldeversuche innerhalb dieses Zeitraums in Minuten",
