Moved the translation string to the CoreHome plugin and updated its prefix from Feedback to CoreHome

--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -110,6 +110,7 @@
         "ReadMoreOnlineGuide": "Read more about this topic in the online guide.",
         "SeeAvailableVersions": "See Available Versions",
         "QuickLinks": "Quick Links",
-        "Profilable": "Profilable"
+        "Profilable": "Profilable",
+        "SearchOnMatomo": "Search '%1$s' on Matomo.org"
     }
 }
